fix(hunt-battle): fix too "tall" monsters in the battle to not overlap

--- a/src/components/hunt-battle/hunt-battle.scss
+++ b/src/components/hunt-battle/hunt-battle.scss
@@ -75,5 +75,7 @@
 
     &__mob-image {
         padding: 0.4rem 0;
+        max-width: 120px;
+        max-height: 130px;
     }
 }
